--- a/assets/style/bulma/elements/_button.scss
+++ b/assets/style/bulma/elements/_button.scss
@@ -4,8 +4,8 @@ $button-background-color: $white !default;
 $button-border-color: $grey-lighter !default;
 $button-border-width: $control-border-width !default;
 
-$button-padding-vertical: calc(0.375em - #{$button-border-width}) !default;
-$button-padding-horizontal: 0.75em !default;
+$button-padding-vertical: calc(1.25rem - #{$button-border-width}) !default;
+$button-padding-horizontal: 1rem !default;
 
 $button-hover-color: $link-hover !default;
 $button-hover-border-color: $link-hover-border !default;
@@ -58,6 +58,7 @@ $button-static-border-color: $grey-lighter !default;
   border-color: $button-border-color;
   border-width: $button-border-width;
   color: $button-color;
+  border-radius: 0px !important;
   cursor: pointer;
   justify-content: center;
   padding-bottom: $button-padding-vertical;
