--- a/assets/style/bulma/utilities/_fonts.scss
+++ b/assets/style/bulma/utilities/_fonts.scss
@@ -1,6 +1,32 @@
 @font-face {
     font-family: 'National';
-    src: url('~assets/fonts/National-Bold.otf') format('otf');
-    font-weight: 800;
-    font-style: bold;
+    src: url('~assets/fonts/National-BoldItalic.woff2') format('woff2'),
+        url('~assets/fonts/National-BoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
 }
+
+@font-face {
+    font-family: 'National';
+    src: url('~assets/fonts/National-Bold.woff2') format('woff2'),
+        url('~assets/fonts/National-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'National';
+    src: url('~assets/fonts/National-Regular.woff2') format('woff2'),
+        url('~assets/fonts/National-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'National';
+    src: url('~assets/fonts/National-RegularItalic.woff2') format('woff2'),
+        url('~assets/fonts/National-RegularItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+
