--- a/assets/style/bulma/components/_level.scss
+++ b/assets/style/bulma/components/_level.scss
@@ -63,12 +63,12 @@
     margin-bottom: 0;
   }
 
-  // Responsiveness
-  @include mobile {
-    &:not(:last-child) {
-      margin-bottom: 0.75rem;
-    }
-  }
+  // // Responsiveness
+  // @include mobile {
+  //   &:not(:last-child) {
+  //     margin-bottom: 0.75rem;
+  //   }
+  // }
 }
 
 .level-left,
