--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -6,7 +6,8 @@ $color-tertiary: #393A60;
 
 $color-primary--medium: rgba($color-primary, 0.5);
 
-$color-tertiary--lightest: rgba(#393A60, 0.05);
+$color-tertiary--lightest: rgba(#393A60, 0.1);
+$color-tertiary--medium: rgba(#393A60, 0.5);
 
 
 $black: hsl(0, 0%, 4%) !default;
