typography hierachy added

--- a/assets/style/bulma/elements/_title.scss
+++ b/assets/style/bulma/elements/_title.scss
@@ -1,6 +1,6 @@
 $title-color: $grey-darker !default;
-$title-size: $size-3 !default;
-$title-weight: $weight-semibold !default;
+$title-size: $size-2 !default;
+$title-weight: $weight-normal !default;
 $title-line-height: 1.125 !default;
 $title-strong-color: inherit !default;
 $title-strong-weight: inherit !default;
