--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -5,6 +5,7 @@ $color-secondary: #F64C72;
 $color-tertiary: #393A60;
 
 $color-primary--medium: rgba($color-primary, 0.5);
+$color-primary--lightest: rgba($color-primary, 0.05);
 
 $color-tertiary--lightest: rgba(#393A60, 0.1);
 $color-tertiary--medium: rgba(#393A60, 0.5);
