--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -1,6 +1,6 @@
 // Colors
 
-$color-primary: #242582;
+$color-primary: #2F2FA2;
 $color-secondary: #F64C72;
 $color-tertiary: #393A60;
 
@@ -8,7 +8,7 @@ $color-primary--medium: rgba($color-primary, 0.5);
 $color-primary--lightest: rgba($color-primary, 0.05);
 
 $color-tertiary--lightest: rgba(#393A60, 0.1);
-$color-tertiary--medium: rgba(#393A60, 0.5);
+$color-tertiary--medium: #9999AC;
 
 
 $black: hsl(0, 0%, 4%) !default;
