fix linebreak hero, fix eventlistener imageslider mobile

--- a/assets/style/bulma/elements/_all.scss
+++ b/assets/style/bulma/elements/_all.scss
@@ -1,13 +1,13 @@
-@import "box";
+// @import "box";
 @import "button";
 @import "container";
 @import "content";
-@import "form";
+// @import "form";
 @import "icon";
 @import "image";
-@import "notification";
-@import "progress";
+// @import "notification";
+// @import "progress";
 @import "table";
-@import "tag";
+// @import "tag";
 @import "title";
 @import "other";
