--- a/assets/style/bulma/components/_all.scss
+++ b/assets/style/bulma/components/_all.scss
@@ -1,13 +1,13 @@
-@import "breadcrumb";
-@import "card";
-@import "dropdown";
-@import "level";
-@import "list";
-@import "media";
-@import "menu";
-@import "message";
-@import "modal";
+// @import "breadcrumb";
+// @import "card";
+// @import "dropdown";
+// @import "level";
+// @import "list";
+// @import "media";
+// @import "menu";
+// @import "message";
+// @import "modal";
 @import "navbar";
-@import "pagination";
-@import "panel";
-@import "tabs";
+// @import "pagination";
+// @import "panel";
+// @import "tabs";
