added events subpage, show only top five events on front page

--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -62,6 +62,10 @@ $weight-medium: 500 !default;
 $weight-semibold: 600 !default;
 $weight-bold: 700 !default;
 
+$time-s: .125s;
+$time-m: .25s;
+$time-l: .5s;
+
 // Responsiveness
 
 // The container horizontal gap, which acts as the offset for breakpoints
