--- a/assets/style/bulma/elements/_button.scss
+++ b/assets/style/bulma/elements/_button.scss
@@ -4,7 +4,7 @@ $button-background-color: $white !default;
 $button-border-color: $grey-lighter !default;
 $button-border-width: $control-border-width !default;
 
-$button-padding-vertical: calc(1.25rem - #{$button-border-width}) !default;
+$button-padding-vertical: .4rem !default;
 $button-padding-horizontal: 1rem !default;
 
 $button-hover-color: $link-hover !default;
