updated coworking section

--- a/assets/style/bulma/elements/_button.scss
+++ b/assets/style/bulma/elements/_button.scss
@@ -61,7 +61,7 @@ $button-static-border-color: $grey-lighter !default;
   border-radius: 0px !important;
   cursor: pointer;
   justify-content: center;
-  padding-bottom: $button-padding-vertical;
+  padding-bottom: .6rem;
   padding-left: $button-padding-horizontal;
   padding-right: $button-padding-horizontal;
   padding-top: $button-padding-vertical;
