projects and board added

--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -8,8 +8,10 @@ $color-secondary--medium: rgba($color-secondary, 0.5);
 $color-secondary--lightest: rgba($color-secondary, 0.05);
 
 $color-primary--medium: rgba($color-primary, 0.5);
+$color-primary--light: rgba($color-primary, 0.1);
 $color-primary--lightest: rgba($color-primary, 0.05);
 
+$color-tertiary--light: rgba(#393A60, 0.2);
 $color-tertiary--lightest: rgba(#393A60, 0.1);
 $color-tertiary--medium: #9999AC;
 
