--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -4,6 +4,8 @@ $color-primary: #2F2FA2;
 $color-secondary: #F64C72;
 $color-tertiary: #393A60;
 
+$color-primary--medium: rgba($color-primary, 0.5);
+
 $color-secondary--medium: rgba($color-secondary, 0.5);
 $color-secondary--lightest: rgba($color-secondary, 0.05);
 
