--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -5,6 +5,7 @@ $color-secondary: #F64C72;
 $color-tertiary: #393A60;
 
 $color-primary--medium: rgba($color-primary, 0.5);
+$color-primary--mediumlight: rgba($color-primary, 0.25);
 $color-primary--light: rgba($color-primary, 0.1);
 
 $color-secondary--medium: rgba($color-secondary, 0.5);
