--- a/assets/style/bulma/utilities/_animations.scss
+++ b/assets/style/bulma/utilities/_animations.scss
@@ -7,3 +7,9 @@
     transform: rotate(359deg);
   }
 }
+
+@keyframes sweep {
+  0%    {opacity: 0;}
+  0%    {opacity: 0;}
+  100%  {opacity: 1;}
+}
