--- a/assets/style/bulma/utilities/_fonts.scss
+++ b/assets/style/bulma/utilities/_fonts.scss
@@ -30,5 +30,13 @@
     font-style: italic;
 }
 
+@font-face {
+    font-family: 'Material Icons';
+    src: url('~assets/fonts/MaterialIcons-Regular.woff2') format('woff2'),
+        url('~assets/fonts/MaterialIcons-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 
