lazy load images added

--- a/assets/style/bulma/utilities/_initial-variables.scss
+++ b/assets/style/bulma/utilities/_initial-variables.scss
@@ -48,7 +48,7 @@ $red: hsl(348, 100%, 61%) !default;
 
 // Typography
 
-$family-sans-serif: "National", "Calibri", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
+$family-sans-serif: "National Regular", "Calibri", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
 $family-monospace: monospace !default;
 $render-mode: optimizeLegibility !default;
 
