info added: exhibition closed, events canceld

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -4,3 +4,8 @@
 @import "./bulma/elements/_all.scss";
 @import "./bulma/grid/_all.scss";
 @import "./bulma/layout/_all.scss";
+
+b {
+  font-family: 'National ExtraBold' !important;
+  font-weight: normal;
+}
