fix(sass): Remove dependency to node-sass

--- a/assets/style/bulma/grid/_columns.scss
+++ b/assets/style/bulma/grid/_columns.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $column-gap: 0.75rem !default;
 
 .column {
@@ -100,11 +102,11 @@ $column-gap: 0.75rem !default;
   @for $i from 1 through 12 {
     .columns.is-mobile > &.is-#{$i} {
       flex: none;
-      width: percentage($i / 12);
+      width: percentage(math.div($i, 12));
     }
 
     .columns.is-mobile > &.is-offset-#{$i} {
-      margin-left: percentage($i / 12);
+      margin-left: percentage(math.div($i, 12));
     }
   }
 
@@ -202,11 +204,11 @@ $column-gap: 0.75rem !default;
     @for $i from 1 through 12 {
       &.is-#{$i}-mobile {
         flex: none;
-        width: percentage($i / 12);
+        width: percentage(math.div($i, 12));
       }
 
       &.is-offset-#{$i}-mobile {
-        margin-left: percentage($i / 12);
+        margin-left: percentage(math.div($i, 12));
       }
     }
   }
@@ -327,12 +329,12 @@ $column-gap: 0.75rem !default;
       &.is-#{$i},
       &.is-#{$i}-tablet {
         flex: none;
-        width: percentage($i / 12);
+        width: percentage(math.div($i, 12));
       }
 
       &.is-offset-#{$i},
       &.is-offset-#{$i}-tablet {
-        margin-left: percentage($i / 12);
+        margin-left: percentage(math.div($i, 12));
       }
     }
   }
@@ -432,11 +434,11 @@ $column-gap: 0.75rem !default;
     @for $i from 1 through 12 {
       &.is-#{$i}-touch {
         flex: none;
-        width: percentage($i / 12);
+        width: percentage(math.div($i, 12));
       }
 
       &.is-offset-#{$i}-touch {
-        margin-left: percentage($i / 12);
+        margin-left: percentage(math.div($i, 12));
       }
     }
   }
@@ -536,11 +538,11 @@ $column-gap: 0.75rem !default;
     @for $i from 1 through 12 {
       &.is-#{$i}-desktop {
         flex: none;
-        width: percentage($i / 12);
+        width: percentage(math.div($i, 12));
       }
 
       &.is-offset-#{$i}-desktop {
-        margin-left: percentage($i / 12);
+        margin-left: percentage(math.div($i, 12));
       }
     }
   }
@@ -640,11 +642,11 @@ $column-gap: 0.75rem !default;
     @for $i from 1 through 12 {
       &.is-#{$i}-widescreen {
         flex: none;
-        width: percentage($i / 12);
+        width: percentage(math.div($i, 12));
       }
 
       &.is-offset-#{$i}-widescreen {
-        margin-left: percentage($i / 12);
+        margin-left: percentage(math.div($i, 12));
       }
     }
   }
@@ -744,11 +746,11 @@ $column-gap: 0.75rem !default;
     @for $i from 1 through 12 {
       &.is-#{$i}-fullhd {
         flex: none;
-        width: percentage($i / 12);
+        width: percentage(math.div($i, 12));
       }
 
       &.is-offset-#{$i}-fullhd {
-        margin-left: percentage($i / 12);
+        margin-left: percentage(math.div($i, 12));
       }
     }
   }
