--- a/assets/style/bulma/utilities/_functions.scss
+++ b/assets/style/bulma/utilities/_functions.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @function mergeColorMaps($bulma-colors, $custom-colors) {
   // we return at least bulma hardcoded colors
   $merged-colors: $bulma-colors;
@@ -52,7 +54,7 @@
   }
   @else if $exp < 0 {
     @for $i from 1 through -$exp {
-      $value: $value / $number;
+      $value: math.div($value, $number);
     }
   }
 
@@ -64,13 +66,13 @@
 
   @each $name, $value in $color-rgb {
     $adjusted: 0;
-    $value: $value / 255;
+    $value: math.div($value, 255);
 
     @if $value < 0.03928 {
-      $value: $value / 12.92;
+      $value: math.div($value, 12.92);
     }
     @else {
-      $value: ($value + 0.055) / 1.055;
+      $value: math.div(($value + 0.055), 1.055);
       $value: powerNumber($value, 2);
     }
 
